# cp-book

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
doc/: spqr.fdb_latexmk  spqr.fls  spqr.tex
src/: alphabetic_huffman_code.hpp  alphabetic_huffman_code.test.cpp  bit.hpp  bit_cast.hpp  bm.hpp  bm.test.cpp  cartesian_tree.hpp  cartesian_tree.test.cpp  char_poly.hpp  cnt_min.hpp  dirichlet_series.hpp  dirichlet_series.test.cpp  fft.hpp  fft.test.cpp  fraction.hpp  hash_map.hpp  jacobi.hpp  lattice_cnt.hpp  lattice_cnt.test.cpp  lct.hpp  level_ancestor.hpp  manacher.hpp  manacher.test.cpp  mcmf.hpp  modnum.hpp  modnum.test.cpp  nim_prod.hpp  optimize.hpp  order_statistic.hpp  perm_tree.hpp  perm_tree.test.cpp  pq_tree.hpp  pq_tree.test.cpp  quaternion_hurwitz.hpp  reverse_comparator.hpp  rmq.hpp  rmq.test.cpp  seg_tree.hpp  seg_tree.test.cpp  smawk.hpp  (+11 more)
src/geometry/: point.hpp  point3d.hpp
src/graph/: make_st_dag.hpp
